# screen-time-manager-for-windows

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.bat  install.ps1  release.sh  uninstall.bat  uninstall.ps1  update.bat  update.ps1
.cargo/: config.toml
.github/workflows/: release.yml
resources/: app.manifest  app.rc
src/: blocking.rs  constants.rs  database.rs  dialogs.rs  dpi.rs  i18n.rs  main.rs  mini_overlay.rs  overlay.rs  telegram.rs  tray.rs
